--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  overflow-y: unset;
+}
+.jumbotron {
+  background-color: #ff3f34;
+  color: #fff;
+  padding: 6rem 0;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.material-icons {
+  font-size: 8rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-title {
+  text-align: center;
+  max-width: 18rem;
+  word-wrap: break-word;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.recipe-link {
+  padding: 1rem;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.recipe-link a {
+  outline: none;
+  display: inline-block;
+  background-color: #ff3f34;
+  border-radius: 15px;
+  margin-left: 5.5rem;
+  padding: 0.4rem;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
 }
